Рационы ZOOOV section tugadi

--- a/index.html
+++ b/index.html
@@ -92,33 +92,33 @@
               </h3>
             </li>
             <li class="eats__item">
-              <img class="eats__img" src="./img/gosht.png">
+              <img class="eats__img" src="./img/gosht.png" alt="">
               Мясо - 70%
             </li>
             <li class="eats__item">
-              <img class="eats__img" src="./img/suyak.png">
+              <img class="eats__img" src="./img/suyak.png" alt="">
               Кости - 10%
             </li>
             <li class="eats__item">
-              <img class="eats__img" src="./img/vegetables.png">
+              <img class="eats__img" src="./img/vegetables.png" alt="">
               Овощи - 7%
             </li>
             <li class="eats__item">
-              <img class="eats__img" src="./img/jigar.png">
+              <img class="eats__img" src="./img/jigar.png" alt="">
               Печень - 5%
             </li>
           </ul>
            <ul class="eats__list2">
            <li class="eats__item">
-          <img class="eats__img" src="./img/ichak.png">
+          <img class="eats__img" src="./img/ichak.png" alt="">
            Субпродукты - 5%
           </li>
     <li class="eats__item">
-      <img class="eats__img" src="./img/yongoq.png">
+      <img class="eats__img" src="./img/yongoq.png" alt="">
       Семена/Орехи - 2% 
     </li>
     <li class="eats__item">
-      <img class="eats__img" src="./img/fruits.png">
+      <img class="eats__img" src="./img/fruits.png" alt="">
       Фрукты - 1%
     </li>
            </ul>
@@ -131,33 +131,33 @@
             </h3>
           </li>
           <li class="eats__item">
-            <img class="eats__img" src="./img/gosht.png">
+            <img class="eats__img" src="./img/gosht.png" alt="">
             Мясо - 58%
           </li>
           <li class="eats__item">
-            <img class="eats__img" src="./img/suyak.png">
+            <img class="eats__img" src="./img/suyak.png" alt="">
             Кости - 17%
           </li>
           <li class="eats__item">
-            <img class="eats__img" src="./img/vegetables.png">
+            <img class="eats__img" src="./img/vegetables.png" alt="">
             Овощи - 7%
           </li>
           <li class="eats__item">
-            <img class="eats__img" src="./img/jigar.png">
+            <img class="eats__img" src="./img/jigar.png" alt="">
             Печень - 7%
           </li>
         </ul>
         <ul class="eats__list2">
           <li class="eats__item">
-            <img class="eats__img" src="./img/ichak.png">
+            <img class="eats__img" src="./img/ichak.png" alt="">
             Субпродукты - 7%
           </li>
           <li class="eats__item">
-            <img class="eats__img" src="./img/yongoq.png">
+            <img class="eats__img" src="./img/yongoq.png" alt="">
             Семена/Орехи - 3% 
           </li>
           <li class="eats__item">
-            <img class="eats__img" src="./img/fruits.png">
+            <img class="eats__img" src="./img/fruits.png" alt="">
             Фрукты - 1%
           </li>
         </ul>
@@ -165,7 +165,104 @@
         </div>
       </div>
     </section>
-    
+     <section>
+      <div class="container">
+        <div class="rations">
+        <div class="rule">
+          <h2 class="rule__tit">
+            Рационы ZOOOV  <img class="rule__oval" src="./img/oval2.png" alt="">
+          </h2>
+          <p class="rule__text">
+            Система питания взрослой собаки не подойдет для щенка, поэтому мы создали разные
+            по составу рационы ZOOOV. Вы сможете заказать полноценное питание исходя из возраста, веса и даже вкусовых предпочтений вашего друга. ZOOOV  заботится o каждой собаке.
+          </p>
+        </div>
+         <ul class="rule__list">
+    <li class="rule__item">
+            <img class="rule__img" src="./img/yeda.png" alt="">
+            <h3 class="rule__title">
+              Для взрослых собак 
+            </h3>
+            <p class="rule__text1">
+              Индейка/Говядина
+            </p>
+            <p class="rule__text2">
+              Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+            </p>
+            <p class="rule__text3">
+              700g / 500g / 300g / 150g / 100g
+            </p>
+            <button class="rule__btn">
+              Заказать
+            </button>
+           </li> 
+    <li class="rule__item">
+            <img class="rule__img" src="./img/yeda2.png" alt="">
+            <h3 class="rule__title">
+              Для щенков 
+            </h3>
+            <p class="rule__text1">
+              Индейка/Говядина
+            </p>
+            <p class="rule__text2">
+              Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+            </p>
+            <p class="rule__text3">
+              700g / 500g / 300g / 150g / 100g
+            </p>
+            <button class="rule__btn">
+              Заказать
+            </button>
+           </li>
+    <li class="rule__item">
+            <img class="rule__img" src="./img/yeda3.png" alt="">
+            <h3 class="rule__title">
+              Для взрослых собак 
+            </h3>
+            <p class="rule__text1">
+              Баранина/Кролик
+            </p>
+            <p class="rule__text2">
+              Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+            </p>
+            <p class="rule__text3">
+              700g / 500g / 300g / 150g / 100g
+            </p>
+            <button class="rule__btn">
+              Заказать
+            </button>
+           </li>
+    <li class="rule__item">
+            <img class="rule__img" src="./img/yeda4.png" alt="">
+            <h3 class="rule__title">
+              Для щенков 
+            </h3>
+            <p class="rule__text1">
+              Баранина/Кролик
+            </p>
+            <p class="rule__text2">
+              Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+            </p>
+            <p class="rule__text3">
+              700g / 500g / 300g / 150g / 100g
+            </p>
+            <button class="rule__btn">
+              Заказать
+            </button>
+           </li>
+
+         </ul>
+         <div class="line">
+           <h2 class="line__tit">
+            Рассчитаем в каком количестве нужно кормить вашего хвостика рационами Zooov
+           </h2>
+           <button class="line__btn">
+            Расчитать
+           </button>
+         </div>
+        </div>
+      </div>
+     </section>
    </main>
 </body>
 </html>
