why section tugadi

--- a/index.html
+++ b/index.html
@@ -263,6 +263,55 @@
         </div>
       </div>
      </section>
+     <section>
+      <div class="container">
+        <div class="why">
+          <h2 class="why__tit">
+            Почему ZOOOV 
+          </h2> 
+           <ul class="why__list">
+            <li class="why__item1">
+               <img class="why__img" src="./img/Leaf.png" alt="">
+               <h3 class="why__title">
+                Натурально
+               </h3>
+               <p class="why__text">
+               bce продукты тщательно отбираем y проверенных поставщиков.
+               </p>
+            </li>
+            <li class="why__item2">
+              <img class="why__img" src="./img/Heartbeat.png" alt="">
+              <h3 class="why__title">
+                Здорово
+              </h3>
+              <p class="why__text">
+                Система питания, которая продлевает жизнь
+                вашего хвостика.                
+              </p>
+           </li>
+           <li class="why__item3">
+            <img class="why__img" src="./img/PawPrint.png" alt="">
+            <h3 class="why__title">
+              Сбалансированно
+            </h3>
+            <p class="why__text">
+              Сделайте заказ на сайте
+              и c вами свяжется  наш менеджер для уточнения деталей.
+            </p>
+         </li>
+         <li class="why__item4">
+          <img class="why__img" src="./img/Smiley.png" alt="">
+          <h3 class="why__title">
+            Удобно
+          </h3>
+          <p class="why__text">
+            Достаточно разморозить порцию ZOOOV,  удалить отрывную крышку c лотка и обед для вашего питомца готов.
+          </p>
+       </li>
+           </ul>
+        </div>
+      </div>
+     </section>
    </main>
 </body>
 </html>
