about section tugadi

--- a/index.html
+++ b/index.html
@@ -312,6 +312,32 @@
         </div>
       </div>
      </section>
+     <section>
+      <div class="container">
+        <div class="about">
+          <div>
+            <img class="about__img" src="./img/all.png " alt="">
+          </div>
+          <div class="about__content">
+          <h2 class="about__tit">
+            C заботой и любовь от Zooov
+          </h2>
+          <p class="about__text">
+            Мы сами владельцы собак и знаем, как важно правильное и качественное питание для долгой и счастливой жизни вашего питомца. Для нас ZOOOV это не просто бизнес, это наш вклад в повышение качества жизни всех собак. <br><br>
+  
+ 
+            Мы знаем, как правильно подобрать и переработать мясо, субпродукты, овощи и фрукты, чтобы питание вашего питомца было максимально сбалансированным и полезным. <br><br>
+
+            Обычного сырого мяса из магазина будет недостаточно для полноценного питания собаки. ZOOOV — экономия времени, вам не придется искать необходимые составляющие для рациона<br><br>
+
+            Мы сами отбираем мясо, кости, легкие, печень и другие говяжьи, кроличьи и птичьи субпродукты y проверенных поставщиков. Закупаем органические овощи и используем разнообразные масла, такие как конопляное и льняное. <br><br>
+            
+            ZOOOV — это удобно, мы доставляем готовый рацион на две недели уже смешанным, расфасованным и упакованным в порционные лотки,готовыми к заморозке. 3a два часа до кормления достаточно переместить контейнер из морозилки в холодильник для ПРАВИЛЬНОЙ разморозки. <br><br>
+          </p>
+          </div>
+        </div>
+      </div>
+     </section>
    </main>
 </body>
 </html>
