whay2 section tugadi

--- a/index.html
+++ b/index.html
@@ -338,6 +338,55 @@
         </div>
       </div>
      </section>
+     <section>
+      <div class="container">
+        <div class="why">
+          <h2 class="why__tit">
+            Как получить ZOOOV?
+          </h2> 
+           <ul class="why__list">
+            <li class="why__item1">
+               <img class="why__img" src="./img/box.png" alt="">
+               <h3 class="why__title">
+                Закажите рацион
+               </h3>
+               <p class="why__text">
+                Выберите рацион для своей собаки. Если не знаете сколько
+                и какой - мы подскажем.
+               </p>
+            </li>
+            <li class="why__item2">
+              <img class="why__img" src="./img/phonecall.png" alt="">
+              <h3 class="why__title">
+                Подтвердите заказ
+              </h3>
+              <p class="why__text">
+                Мы свяжемся c вами для подтверждения заказа
+                и уточнения деталей.            
+              </p>
+           </li>
+           <li class="why__item3">
+            <img class="why__img" src="./img/Clock.png" alt="">
+            <h3 class="why__title">
+              Ожидайте доставки
+            </h3>
+            <p class="why__text">
+              Привозим заказ на следующий день. По СПб - 350₽, при заказе от 3 500₽ - бесплатно. Лен. область - по договоренности.
+            </p>
+         </li>
+         <li class="why__item4">
+          <img class="why__img" src="./img/Heartbeat.png" alt="">
+          <h3 class="why__title">
+            Радуйте своего питомца
+          </h3>
+          <p class="why__text">
+            Просто разморозьте рацион: при комнатной температуре - 3 часа, в холодильнике - 12-15 часов.
+          </p>
+       </li>
+           </ul>
+        </div>
+      </div>
+     </section>
    </main>
 </body>
 </html>
