vapros section tugadi

--- a/index.html
+++ b/index.html
@@ -387,6 +387,76 @@
         </div>
       </div>
      </section>
+     <section>
+      <div class="container">
+        <div class="vapros">
+          <div>
+            <h2 class="vapros__tit">
+              Частые вопросы
+            </h2>
+          </div>
+          <div class="vapros__content">
+            <ul class="vapros__list">
+              <li class="vapros__item">
+              <div>
+                <h3 class="vapros__title">
+                  He опасны ли бактерии, которые находятся в сыром мясе?
+                </h3>
+                <p>
+                  Y здоровых собак отличная иммунная система, готовая ко всем видам бактерий. Рацион BARF как раз укрепит иммунитет вашей собаки и защитит ee от влияния бактерий, которые находятся на улице или даже в вашем доме.
+                </p>
+              </div>
+                <div>
+                  <img class="vapros__img" src="./img/minus.png" alt="">
+                </div>
+              </li> <br><hr>
+              <li class="vapros__item">
+                <h3 class="vapros__title">
+                  Надо ли давать дополнительно витамины к рациону BARF?
+                </h3>
+                <img  class="vapros__img" src="./img/plus.png" alt="">
+              </li><br><hr>
+              <li class="vapros__item">
+                <h3 class="vapros__title">
+                  A если моя собака уже давно питается промышленным кормом и y нее нет проблем co здоровьем?
+                </h3>
+                <img  class="vapros__img" src="./img/plus.png" alt="">
+              </li><br><hr>
+              <li class="vapros__item">
+                <h3 class="vapros__title">
+                  Можно ли смешивать натуральный корм и корм промышленного производства?
+                </h3>
+                <img  class="vapros__img" src="./img/plus.png" alt="">
+              </li><br><hr>
+              <li class="vapros__item">
+                <h3 class="vapros__title">
+                  Mogy ли я сам составить для своей собаки рацион по системе BARF?
+                </h3>
+                <img  class="vapros__img" src="./img/plus.png" alt="">
+              </li><br><hr>
+              <li class="vapros__item">
+                <h3 class="vapros__title">
+                  Присутствует ли в ZOOOV рационах рыба?
+                </h3>
+                <img  class="vapros__img" src="./img/plus.png" alt="">
+              </li><br><hr>
+              <li class="vapros__item">
+                <h3 class="vapros__title">
+                  Как перевести питомца на натуральное питание?
+                </h3>
+                <img  class="vapros__img" src="./img/plus.png" alt="">
+              </li><br><hr>
+              <li class="vapros__item">
+                <h3 class="vapros__title">
+                  Как готовить рацион ZOOOV?
+                </h3>
+                <img  class="vapros__img" src="./img/plus.png" alt="">
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+     </section>
    </main>
 </body>
 </html>
