--- a/index.html
+++ b/index.html
@@ -456,5 +456,76 @@
       </div>
      </section>
    </main>
+
+   <footer>
+    <div class="container">
+     <div class="contact">
+
+
+     <div class="contactcontent">
+      <h2 class="contactcontent__tit">
+        Контакты
+      </h2>
+      <p class="contactcontent__t">
+        Вы всегда можете c нами связаться
+       по телефону или в мессенджерах 
+      </p>
+      <p class="contactcontent__t2">
+        +7 (900)000-00-00
+      </p>
+      <div class="btn__container">
+        <a href="https://wa.me/your_number" class="chat__btn">
+            <img class="WhatsApp" src="./img/WhatsappLogo.png" alt="WhatsApp" width="20" height="20">
+            Написать в WhatsApp
+        </a>
+        <a href="https://t.me/mucm9" class="chat__btn">
+            <img class="WhatsApp" src="./img/TelegramLogo.png" alt="Telegram" width="20" height="20">
+            Написать в Telegram
+        </a>
+    </div>
+    <p class="contactcontent__t3">
+      Подписывайтесь на наш Instagram
+     и следите за новостями
+    </p>
+     </div>
+
+     <div class="contactcontent__img">
+       <img class="contact__imgdog" src="./img/smiledog.png" alt=""><br>
+       <img class="contact__imgmeat" src="./img/IMG_1527.png" alt="">
+     </div>
+
+     <div class="form__container">
+      <h2 class="form__tit">Остались вопросы?</h2>
+      <p class="form__text">Напишите нам и мы обязательно подробно на них ответим</p>
+      <form action="#">
+          <input class="imya" type="text" name="name" placeholder="Имя" required>
+          <input class="imya" type="email" name="email" placeholder="Email" required> 
+          <textarea class="vash" name="question" placeholder="Ваш вопрос..." required></textarea><br>
+          <label class="privacy">
+              <input type="checkbox" required>
+              Даю согласие на обработку персональных данных
+          </label>
+          <button class="form__btn">Отправить</button>
+      </form>
+  </div>
+
+
+     </div>
+
+     
+     <div class="foot">
+      <p class="foot__text">
+        ИП Коваленко Евгений Геннадьевич ИНН784215731801, адрес производства г. Санкт-Петербург 17-я линия В.О 66, пом. 2/07
+      </p>
+      <p class="foot__text">
+        Публичная оферта
+      </p>
+      <p class="foot__text">
+        Политика конфеденциальности
+      </p>
+
+     </div>
+    </div>
+   </footer>
 </body>
 </html>
